<resources>
    <string name="app_name">revisionLab</string>

    <string name="txtV1"> Readers Name </string>
    <string name="txtE1"> Name </string>
    <string name="but1"> OK </string>
    <string name="img1"> IMG1 </string>

    ============================================================
    <string name="txtV2"> Readers Name </string>
    <string name="txtE2">  </string>
    <string name="but2"> OK </string>
    <string name="img2"> IMG2 </string>

    ============================================================
    <string name="but3"> Books </string>
    <string name="but4"> Paper Article </string>

    ============================================================
    <string name="txtV3"> Books </string>
    <string name="txtV4"> Paper </string>

    ============================================================
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtV5"> Title </string>
    <string name="txtV6"> Author </string>
    <string name="txtE3">  </string>
    <string name="txtE4">  </string>
    <string name="but5"> View </string>
</resources>